--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,9 @@ server.servlet.context-path=/wex-purchase-api
 app.api.version=v1
 app.api.base=/api/${app.api.version}
 
+#API Fiscal
+app.api.url=https://api.fiscaldata.treasury.gov/services/api/fiscal_service/v1/accounting/od/rates_of_exchange
+
 # H2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -12,7 +15,8 @@ spring.datasource.url=jdbc:h2:mem:wex-db
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
 
 
